package StackPackage;

message Object {
	optional double obj = 1;
}
